Face detection added but not working because CORS policy.

--- a/index.html
+++ b/index.html
@@ -116,16 +116,18 @@
 
                                 <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
-
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
                                 <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
                                 <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
 
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
-
                                 <a class="dropdown-item" href="#" id="btnDilate" data-toggle="modal" data-target="#dilateModal">Dilate</a>
                                 <a class="dropdown-item" href="#" id="btnErode" data-toggle="modal" data-target="#erodeModal">Erode</a>
+
+                                <hr>
+                                <h6 class="dropdown-header">Other</h6>
+                                <a class="dropdown-item" href="#" id="triggerFaceDetect">Detect Faces</a>
                             </div>
                         </li>
 
