text input it's almost done

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Adicionar Texto">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerText" data-toggle="tooltip" data-placement="right" title="Adicionar Texto">
                             <i class="material-icons">
                                 format_shapes
                             </i>
@@ -219,14 +219,15 @@
                               <input class="col-sm-2 btn btn-outline-secondary jscolor" id="textColor" data-toggle="tooltip" data-placement="right" title="" value="fff" data-original-title="Choose color">
                               <select class="custom-select custom-select-sm" id="fontFamily">
                                   <option selected="">Fonte</option>
-                                  <option value="1">One</option>
-                                  <option value="2">Two</option>
-                                  <option value="3">Three</option>
+                                  <option value="Comic Sans MS">Comic Sans MS</option>
+                                  <option value="Georgia">Georgia</option>
+                                  <option value="Book Antiqua">Book Antiqua</option>
+                                  <option value"Arial">Arial</option>
                               </select>
                           </div>
                   </div>
                 <div class="col-md-6">
-                    <textarea rows = "3" cols="8" class="form-control" aria-describedby="meta-info"> </textarea>
+                    <textarea rows = "3" cols="8" class="form-control" id="textContent" aria-describedby="meta-info"> </textarea>
                 </div>
             </div>
         </main>
