Resize Image option added.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerResize" data-toggle="tooltip" data-placement="right" title="Redimensionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="btnResizeImg" data-toggle="tooltip" data-placement="right" title="Redimensionar">
                             <i class="material-icons">
                                 crop_free
                             </i>
