Face detection and Sharpen removed.

--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
                             </a>
                             <div class="dropdown-menu">
                                 <h6 class="dropdown-header">Filters</h6>
-                                <a class="dropdown-item disabled" href="#" id="triggerBlur">Blur</a>
+                                <a class="dropdown-item" href="#" id="triggerBlur">Blur</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerSharpen">Sharpen</a>
                                 <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
 
@@ -116,17 +115,13 @@
                                 <hr>
                                 <h6 class="dropdown-header">Binarization</h6>
                                 <a class="dropdown-item" href="#" id="triggerTresh">Thresholding</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerLaplace">Laplace</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerSobel">Sobel</a>
+                                <a class="dropdown-item" href="#" id="triggerLaplace">Laplace</a>
+                                <a class="dropdown-item" href="#" id="triggerSobel">Sobel</a>
 
                                 <hr>
                                 <h6 class="dropdown-header">Morphological Operations</h6>
                                 <a class="dropdown-item" href="#" id="btnDilate" data-toggle="modal" data-target="#dilateModal">Dilate</a>
                                 <a class="dropdown-item" href="#" id="btnErode" data-toggle="modal" data-target="#erodeModal">Erode</a>
-
-                                <hr>
-                                <h6 class="dropdown-header">Other</h6>
-                                <a class="dropdown-item" href="#" id="triggerFaceDetect">Detect Faces</a>
                             </div>
                         </li>
 
