--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <body>
 
     <!-- MODALS -->
-        <div class="modal fade" id="dilateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="morphModal" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalCenterTitle">Morphological options</h5>
+                        <h5 class="modal-title" id="modalCenterTitle">Morphological options</h5>
                         <a href="#" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </a>
@@ -26,10 +26,22 @@
 
                     <div class="modal-body">
                         <div class="form-group">
+                            <select class="custom-select" id="morphType">
+                                <option value="-1" selected>Select the type of operation</option>
+                                <option value="0">Erosion</option>
+                                <option value="1">Dilation</option>
+                                <option value="2">Opening</option>
+                                <option value="3">Closing</option>
+                                <option value="4">Morphologic Gradient</option>
+                                <option value="5">Top Hat</option>
+                                <option value="6">Black Hat</option>
+                            </select>
+                            <br>
                             <label for="kerSize">Kernel Size</label>
                             <input type="number" class="form-control" id="kerSizeD" min="1" max="25">
+                            <br>
                             <select class="custom-select" id="kerShapeD">
-                                <option selected>Select the kernel shape</option>
+                                <option value="-1" selected>Select the kernel shape</option>
                                 <option value="0">Rect</option>
                             </select>
                         </div>
@@ -38,35 +50,6 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerDilate">Apply</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="modal fade" id="erodeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalCenterTitle">Morphological options</h5>
-                        <a href="#" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </a>
-                    </div>
-
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="kerSize">Kernel Size</label>
-                            <input type="number" class="form-control" id="kerSizeE" min="1" max="25">
-                            <select class="custom-select" id="kerShapeE">
-                                <option selected>Select the kernel shape</option>
-                                <option value="0">Rect</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerErode">Apply</button>
                     </div>
                 </div>
             </div>
@@ -109,6 +92,7 @@
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
                                 <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
                                 <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
+                                <a class="dropdown-item" href="#" id="triggerCartoon">Cartoon</a>
                             </div>
                         </li>
 
@@ -151,8 +135,9 @@
                             </a>
 
                             <div class="dropdown-menu">
-                                <a class="dropdown-item disabled" href="#" id="triggerColorHist">Color Histogram</a>
-                                <a class="dropdown-item disabled" href="#" id="triggerColorSet">Brightness, Contrast, Saturation</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerBrightness">Brightness</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerContrast">Contrast</a>
+                                <a class="dropdown-item disabled" href="#" id="triggerSaturation">Saturation</a>
                             </div>
                         </li>
 
