--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="modalCenterTitle">Morphological options</h5>
+                        <h5 class="modal-title" id="modalCenterTitle">Morphological options*</h5>
                         <a href="#" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </a>
@@ -26,6 +26,7 @@
 
                     <div class="modal-body">
                         <div class="form-group">
+                            <label for="kerShape">Transform Type</label>
                             <select class="custom-select" id="morphType">
                                 <option value="-1" selected>Select the type of operation</option>
                                 <option value="0">Erosion</option>
@@ -36,20 +37,26 @@
                                 <option value="5">Top Hat</option>
                                 <option value="6">Black Hat</option>
                             </select>
-                            <br>
+
+                            <br><br>
+
                             <label for="kerSize">Kernel Size</label>
-                            <input type="number" class="form-control" id="kerSizeD" min="1" max="25">
+                            <input type="number" class="form-control" id="kerSize" min="1" max="40" value=1>
                             <br>
-                            <select class="custom-select" id="kerShapeD">
+                            <label for="kerShape">Kernel Shape</label>
+                            <select class="custom-select" id="kerShape">
                                 <option value="-1" selected>Select the kernel shape</option>
                                 <option value="0">Rect</option>
+                                <option value="1">Crossed</option>
+                                <option value="2">Ellipse</option>
                             </select>
                         </div>
                     </div>
 
                     <div class="modal-footer">
+                        <p>Note: In order to perform the morphological operation, the image will be binarized first.</p>
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerDilate">Apply</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal" id="triggerMorphTransform">Apply</button>
                     </div>
                 </div>
             </div>
@@ -111,23 +118,6 @@
                             </div>
                         </li>
 
-                    <!-- MORPHOLOGICAL OPERATIONS SUBMENU -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
-                                Morphological Operations
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#" id="btnDilate" data-toggle="modal" data-target="#dilateModal">Dilate</a>
-                                <a class="dropdown-item" href="#" id="btnErode" data-toggle="modal" data-target="#erodeModal">Erode</a>
-                                <a class="dropdown-item disabled" href="#" id="btnOpening" data-toggle="modal" data-target="#openingModal">Opening</a>
-                                <a class="dropdown-item disabled" href="#" id="btnClosing" data-toggle="modal" data-target="#closingModal">Closing</a>
-                                <a class="dropdown-item disabled" href="#" id="btnMorphGrad" data-toggle="modal" data-target="#morphGradModal">Morphological Gradient</a>
-                                <a class="dropdown-item disabled" href="#" id="btnTopHat" data-toggle="modal" data-target="#topHatModal">Top Hat</a>
-
-                            </div>
-                        </li>
-
-
                     <!-- COLOR SUBMENU -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="" data-toggle="dropdown">
@@ -140,6 +130,13 @@
                                 <a class="dropdown-item disabled" href="#" id="triggerSaturation">Saturation</a>
                             </div>
                         </li>
+
+                    <!-- MORPHOLOGICAL OPERATIONS -->
+                        <!-- <li class="nav-item dropdown"> -->
+                            <a class="nav-link" href="#" id="" data-toggle="modal" data-target="#morphModal">
+                                Morphological Operations
+                            </a>
+                        <!-- </li> -->
 
                     </ul>
                 </div>
