Flip and Rotate image options added.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#" id="triggerBlur">Blur</a>
                                 <a class="dropdown-item" href="#" id="triggerPixelize">Pixelize</a>
-                                <a class="dropdown-item" href="#" id="triggerSepia">Sépia</a>
+                                <a class="dropdown-item" href="#" id="triggerSepia">Sepia</a>
                                 <a class="dropdown-item" href="#" id="triggerGrayScale">Gray Scale</a>
+                                <a class="dropdown-item" href="#" id="triggerNegative">Negative</a>
                                 <a class="dropdown-item" href="#" id="triggerCartoon">Cartoon</a>
                             </div>
                         </li>
@@ -152,39 +153,45 @@
                 <div class="col-md-1 tool-box shadow-sm bg-white rounded">
                     <div class="row">
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pincel">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerPen" data-toggle="tooltip" data-placement="right" title="Pen">
                             <i class="material-icons">
                                 edit
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="btnResizeImg" data-toggle="tooltip" data-placement="right" title="Redimensionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="btnResizeImg" data-toggle="tooltip" data-placement="right" title="Resize">
                             <i class="material-icons">
                                 crop_free
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerRotate" data-toggle="tooltip" data-placement="right" title="Rotacionar">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="btnRotateImg" data-toggle="tooltip" data-placement="right" title="Rotate">
                             <i class="material-icons">
                                 loop
                             </i>
                         </a>
 
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerCutImg" data-toggle="tooltip" data-placement="right" title="Cortar Imagem">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary icon" id="triggerCutImg" data-toggle="tooltip" data-placement="right" title="Cut Image">
                             <i class="material-icons">
                                 crop
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerText" data-toggle="tooltip" data-placement="right" title="Adicionar Texto">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerText" data-toggle="tooltip" data-placement="right" title="Put Text">
                             <i class="material-icons">
                                 format_shapes
                             </i>
                         </a>
 
-                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" data-toggle="tooltip" data-placement="right" title="Espelhar Verticalmente">
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerHorizontalFlip"data-toggle="tooltip" data-placement="right" title="Flip Horizontally">
                             <i class="material-icons">
+                                flip
+                            </i>
+                        </a>
+
+                        <a href="#" class="col-md-4 offset-md-3 btn btn-outline-secondary" id="triggerVerticalFlip"data-toggle="tooltip" data-placement="right" title="Flip Vertically">
+                            <i class="material-icons v">
                                 flip
                             </i>
                         </a>
